# bzrformats

./: .gitignore  .testr.conf  Cargo.toml  MANIFEST.in  README.md  bzrformats_breezy_dependencies.md  pyproject.toml  setup.py
.github/workflows/: pythonpackage.yml  rust.yml  wheels.yaml
breezy/: builtins.py  diff.py  memorytree.py  merge.py  merge_directive.py  revision.py  shelf.py  status.py  upstream_import.py
breezy/bzr/: __init__.py  annotate.py  branch.py  conflicts.py  debug_commands.py  fetch.py  groupcompress_repo.py  inventorytree.py  knitpack_repo.py  knitrepo.py  pack_repo.py  reconcile.py  remote.py  transform.py  vf_repository.py  workingtree.py  workingtree_3.py  workingtree_4.py
breezy/bzr/bundle/: bundle_data.py
breezy/bzr/bundle/serializer/: v4.py
breezy/bzr/smart/: protocol.py  repository.py
breezy/bzr/tests/: __init__.py  per_pack_repository.py  test_remote.py  test_repository.py  test_smart.py  test_workingtree_4.py
breezy/bzr/tests/blackbox/: test_dump_btree.py
breezy/bzr/tests/per_repository_chk/: test_supported.py
breezy/bzr/tests/per_repository_vf/: test_repository.py
breezy/git/: annotate.py  cache.py  fetch.py  repository.py  revision.py
breezy/git/tests/: test_fetch.py  test_object_store.py
breezy/plugins/fastimport/: bzr_commit_handler.py  revision_store.py
breezy/plugins/rewrite/: rebase.py
breezy/plugins/weave_fmt/: __init__.py  bzrdir.py  repository.py  workingtree.py
breezy/plugins/weave_fmt/store/: __init__.py
breezy/tests/: __init__.py  test_import_tariff.py  test_merge.py  test_selftest.py  test_shelf.py  test_transform.py
breezy/tests/blackbox/: test_branch.py
breezy/tests/per_interrepository/: test_fetch.py
breezy/tests/per_workingtree/: test_workingtree.py
breezy/version_info_formats/: format_rio.py
bzrformats/: __init__.py  _dirstate_helpers_pyx.pyx  annotate.py  bisect_multi.py  btree_index.py  chk_map.py  chunk_writer.py  diff.py  dirstate.py  errors.py  groupcompress.py  index.py  inventory.py  inventory_delta.py  knit.py  lock.py  lru_cache.py  merge.py  multiparent.py  osutils.py  pack.py  pack_repo.py  progress.py  registry.py  revision.py  rio_patch.py  serializer.py  textmerge.py  transport.py  tuned_gzip.py  versionedfile.py  weave.py  weavefile.py  xml4.py  xml5.py  xml6.py  xml7.py  xml8.py  xml_serializer.py
bzrformats/bazaar-py/src/: inventory.rs
bzrformats/tests/: __init__.py  per_versionedfile.py  test__btree_serializer.py  test__dirstate_helpers.py  test__groupcompress.py  test_bisect_multi.py  test_btree_index.py  test_chk_map.py  test_chk_serializer.py  test_chunk_writer.py  test_dirstate.py  test_errors.py  test_generate_ids.py  test_groupcompress.py  test_hashcache.py  test_index.py  test_inv.py  test_inventory_delta.py  test_knit.py  test_lock.py  test_lru_cache.py  test_merge.py  test_multiparent.py  test_osutils.py  test_pack.py  test_registry.py  test_revision.py  test_rio.py  test_serializer.py  test_textmerge.py  test_tuned_gzip.py  test_versionedfile.py  test_weave.py  test_xml.py
bzrformats/tests/per_inventory/: __init__.py  basics.py
crates/bazaar/: Cargo.toml
crates/bazaar-py/: Cargo.toml
crates/bazaar-py/src/: bisect_multi.rs  btree_index.rs  btree_serializer.rs  chk_map.rs  chunk_writer.rs  dirstate.rs  dirstate_helpers.rs  groupcompress.rs  groupcompress_delta.rs  hashcache.rs  index.rs  inventory.rs  knit.rs  lib.rs  lock.rs  multiparent.rs  pack.rs  rio.rs  textmerge.rs  transport.rs  tuned_gzip.rs  versionedfile.rs  weave.rs
crates/bazaar/src/: bencode_serializer.rs  bisect_multi.rs  btree_builder.rs  btree_index.rs  chk_map.rs  chunk_writer.rs  dirstate.rs  filters.rs  gen_ids.rs  hashcache.rs  index.rs  inventory.rs  inventory_delta.rs  key_mapper.rs  knit.rs  lib.rs  lock.rs  multiparent.rs  pack.rs  pyversionedfile.rs  revision.rs  rio.rs  serializer.rs  textmerge.rs  transport.rs  tuned_gzip.rs  versionedfile.rs  weave.rs  xml_serializer.rs
crates/bazaar/src/dirstate/: bisect.rs  entry.rs  errors.rs  file_transport.rs  header.rs  id_index.rs  iter_changes.rs  kind.rs  mod.rs  pack_stat.rs  parser.rs  path.rs  sha1.rs  tests.rs  transport.rs  walker.rs
crates/bazaar/src/groupcompress/: block.rs  compressor.rs  delta.rs  line_delta.rs  manager.rs  mod.rs  rabin_delta.rs  sort.rs  wire.rs
crates/osutils-py/: Cargo.toml
crates/osutils-py/src/: lib.rs
crates/osutils-rs/: Cargo.toml
crates/osutils-rs/src/: chunkreader.rs  lib.rs  mounts-win32.rs  path.rs
doc/developers/: index.txt
vcsgraph/: Cargo.toml  __init__.py
