[workspace]
members = ["crates/*"]

[workspace.package]
version = "3.4.0"

[workspace.dependencies]
nix = ">=0.26"
pyo3 = ">=0.26,<0.28"
pyo3-filelike = "0.5.0"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
url = "2"
log = "0.4"
whoami = { version = "1", default-features = false }
gettext = { version = "0.4.0" }
